tmql4j-tolog/src/main/java/de/topicmapslab/tmql4j/tolog/components/parser/TologParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g 2009-11-17 14:35:40
package de.topicmapslab.tmql4j.tolog.components.parser;

import org.antlr.runtime.BaseRecognizer;
import org.antlr.runtime.BitSet;
import org.antlr.runtime.DFA;
import org.antlr.runtime.EarlyExitException;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.TreeAdaptor;

public class TologParser extends Parser {
	public static final String[] tokenNames = new String[] { "<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMA", "ROUND_BRACKETS_OPEN", "ROUND_BRACKETS_CLOSE", "ANGLE_BRACKETS_OPEN",
			"ANGLE_BRACKETS_CLOSE", "DOUBLEDOT", "OR", "OPERATOR", "QUESTIONMARK", "UNDERSCORE", "DOT", "HYPEN", "WHITESPACE", "PERCENT", "RULE", "DOLLAR", "LOWER", "UPPER", "DIGIT", "SYMBOLS",
			"ALPHANUMERIC", "NOT", "LIMIT", "ORDERBY", "USING", "IMPORT", "FOR", "AS", "SELECT", "FROM", "COUNT", "ASC", "DESC", "OFFSET", "OBJID", "IDENT", "QNAME", "URL", "INDICATOR", "ADDRESS",
			"SRCLOC", "STRING", "INTEGER", "VARIABLE", "CLAUSE" };
	public static final int DOLLAR = 19;
	public static final int LIMIT = 26;
	public static final int FOR = 30;
	public static final int COUNT = 34;
	public static final int ORDERBY = 27;
	public static final int ANGLE_BRACKETS_OPEN = 7;
	public static final int DOUBLEDOT = 9;
	public static final int NOT = 25;
	public static final int EOF = -1;
	public static final int AS = 31;
	public static final int IMPORT = 29;
	public static final int USING = 28;
	public static final int COMMA = 4;
	public static final int OFFSET = 37;
	public static final int ALPHANUMERIC = 24;
	public static final int ROUND_BRACKETS_OPEN = 5;
	public static final int QUESTIONMARK = 12;
	public static final int IDENT = 39;
	public static final int DIGIT = 22;
	public static final int CLAUSE = 48;
	public static final int DOT = 14;
	public static final int SELECT = 32;
	public static final int INTEGER = 46;
	public static final int OBJID = 38;
	public static final int RULE = 18;
	public static final int PERCENT = 17;
	public static final int HYPEN = 15;
	public static final int ASC = 35;
	public static final int OPERATOR = 11;
	public static final int INDICATOR = 42;
	public static final int WHITESPACE = 16;
	public static final int UNDERSCORE = 13;
	public static final int ROUND_BRACKETS_CLOSE = 6;
	public static final int URL = 41;
	public static final int ANGLE_BRACKETS_CLOSE = 8;
	public static final int QNAME = 40;
	public static final int VARIABLE = 47;
	public static final int ADDRESS = 43;
	public static final int OR = 10;
	public static final int SRCLOC = 44;
	public static final int LOWER = 20;
	public static final int DESC = 36;
	public static final int SYMBOLS = 23;
	public static final int FROM = 33;
	public static final int UPPER = 21;
	public static final int STRING = 45;

	// delegates
	// delegators

	public TologParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}

	public TologParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);

	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}

	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}

	@Override
	public String[] getTokenNames() {
		return TologParser.tokenNames;
	}

	@Override
	public String getGrammarFileName() {
		return "D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g";
	}

	public static class query_return extends ParserRuleReturnScope {
		Object tree;

		@Override
		public Object getTree() {
			return tree;
		}
	};

	// $ANTLR start "query"
	// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:67:1:
	// query : ( head )? clauselist ( WHITESPACE )? ( tail )? QUESTIONMARK ;
	public final TologParser.query_return query() throws RecognitionException {
		TologParser.query_return retval = new TologParser.query_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token WHITESPACE3 = null;
		Token QUESTIONMARK5 = null;
		TologParser.head_return head1 = null;

		TologParser.clauselist_return clauselist2 = null;

		TologParser.tail_return tail4 = null;

		Object WHITESPACE3_tree = null;
		Object QUESTIONMARK5_tree = null;

		try {
			// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:67:6:
			// ( ( head )? clauselist ( WHITESPACE )? ( tail )? QUESTIONMARK )
			// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:67:9:
			// ( head )? clauselist ( WHITESPACE )? ( tail )? QUESTIONMARK
			{
				root_0 = adaptor.nil();

				// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:67:9:
				// ( head )?
				int alt1 = 2;
				alt1 = dfa1.predict(input);
				switch (alt1) {
					case 1:
						// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:67:9:
						// head
					{
						pushFollow(FOLLOW_head_in_query81);
						head1 = head();

						state._fsp--;

						adaptor.addChild(root_0, head1.getTree());

					}
						break;

				}

				pushFollow(FOLLOW_clauselist_in_query84);
				clauselist2 = clauselist();

				state._fsp--;

				adaptor.addChild(root_0, clauselist2.getTree());
				// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:67:26:
				// ( WHITESPACE )?
				int alt2 = 2;
				int LA2_0 = input.LA(1);

				if ((LA2_0 == WHITESPACE)) {
					alt2 = 1;
				}
				switch (alt2) {
					case 1:
						// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:67:26:
						// WHITESPACE
					{
						WHITESPACE3 = (Token) match(input, WHITESPACE, FOLLOW_WHITESPACE_in_query86);
						WHITESPACE3_tree = adaptor.create(WHITESPACE3);
						adaptor.addChild(root_0, WHITESPACE3_tree);

					}
						break;

				}

				// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:67:38:
				// ( tail )?
				int alt3 = 2;
				int LA3_0 = input.LA(1);

				if (((LA3_0 >= LIMIT && LA3_0 <= ORDERBY) || LA3_0 == OFFSET)) {
					alt3 = 1;
				}
				switch (alt3) {
					case 1:
						// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:67:38:
						// tail
					{
						pushFollow(FOLLOW_tail_in_query89);
						tail4 = tail();

						state._fsp--;

						adaptor.addChild(root_0, tail4.getTree());

					}
						break;

				}

				QUESTIONMARK5 = (Token) match(input, QUESTIONMARK, FOLLOW_QUESTIONMARK_in_query92);
				QUESTIONMARK5_tree = adaptor.create(QUESTIONMARK5);
				adaptor.addChild(root_0, QUESTIONMARK5_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
			retval.tree = adaptor.errorNode(input, retval.start, input.LT(-1), re);

		} finally {
		}
		return retval;
	}

	// $ANTLR end "query"

	public static class clauselist_return extends ParserRuleReturnScope {
		Object tree;

		@Override
		public Object getTree() {
			return tree;
		}
	};

	// $ANTLR start "clauselist"
	// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:68:1:
	// clauselist : clause ( ( WHITESPACE )? COMMA ( WHITESPACE )? clause )* ;
	public final TologParser.clauselist_return clauselist() throws RecognitionException {
		TologParser.clauselist_return retval = new TologParser.clauselist_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token WHITESPACE7 = null;
		Token COMMA8 = null;
		Token WHITESPACE9 = null;
		TologParser.clause_return clause6 = null;

		TologParser.clause_return clause10 = null;

		Object WHITESPACE7_tree = null;
		Object COMMA8_tree = null;
		Object WHITESPACE9_tree = null;

		try {
			// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:68:11:
			// ( clause ( ( WHITESPACE )? COMMA ( WHITESPACE )? clause )* )
			// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:68:16:
			// clause ( ( WHITESPACE )? COMMA ( WHITESPACE )? clause )*
			{
				root_0 = adaptor.nil();

				pushFollow(FOLLOW_clause_in_clauselist101);
				clause6 = clause();

				state._fsp--;

				adaptor.addChild(root_0, clause6.getTree());
				// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:68:23:
				// ( ( WHITESPACE )? COMMA ( WHITESPACE )? clause )*
				loop6: do {
					int alt6 = 2;
					int LA6_0 = input.LA(1);

					if ((LA6_0 == WHITESPACE)) {
						int LA6_1 = input.LA(2);

						if ((LA6_1 == COMMA)) {
							alt6 = 1;
						}

					} else if ((LA6_0 == COMMA)) {
						alt6 = 1;
					}

					switch (alt6) {
						case 1:
							// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:68:24:
							// ( WHITESPACE )? COMMA ( WHITESPACE )? clause
						{
							// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:68:24:
							// ( WHITESPACE )?
							int alt4 = 2;
							int LA4_0 = input.LA(1);

							if ((LA4_0 == WHITESPACE)) {
								alt4 = 1;
							}
							switch (alt4) {
								case 1:
									// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:68:24:
									// WHITESPACE
								{
									WHITESPACE7 = (Token) match(input, WHITESPACE, FOLLOW_WHITESPACE_in_clauselist104);
									WHITESPACE7_tree = adaptor.create(WHITESPACE7);
									adaptor.addChild(root_0, WHITESPACE7_tree);

								}
									break;

							}

							COMMA8 = (Token) match(input, COMMA, FOLLOW_COMMA_in_clauselist107);
							COMMA8_tree = adaptor.create(COMMA8);
							adaptor.addChild(root_0, COMMA8_tree);

							// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:68:42:
							// ( WHITESPACE )?
							int alt5 = 2;
							int LA5_0 = input.LA(1);

							if ((LA5_0 == WHITESPACE)) {
								alt5 = 1;
							}
							switch (alt5) {
								case 1:
									// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:68:42:
									// WHITESPACE
								{
									WHITESPACE9 = (Token) match(input, WHITESPACE, FOLLOW_WHITESPACE_in_clauselist109);
									WHITESPACE9_tree = adaptor.create(WHITESPACE9);
									adaptor.addChild(root_0, WHITESPACE9_tree);

								}
									break;

							}

							pushFollow(FOLLOW_clause_in_clauselist112);
							clause10 = clause();

							state._fsp--;

							adaptor.addChild(root_0, clause10.getTree());

						}
							break;

						default:
							break loop6;
					}
				} while (true);

			}

			retval.stop = input.LT(-1);

			retval.tree = adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
			retval.tree = adaptor.errorNode(input, retval.start, input.LT(-1), re);

		} finally {
		}
		return retval;
	}

	// $ANTLR end "clauselist"

	public static class clause_return extends ParserRuleReturnScope {
		Object tree;

		@Override
		public Object getTree() {
			return tree;
		}
	};

	// $ANTLR start "clause"
	// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:69:1:
	// clause : ( predclause | opclause | orclause | notclause );
	public final TologParser.clause_return clause() throws RecognitionException {
		TologParser.clause_return retval = new TologParser.clause_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		TologParser.predclause_return predclause11 = null;

		TologParser.opclause_return opclause12 = null;

		TologParser.orclause_return orclause13 = null;

		TologParser.notclause_return notclause14 = null;

		try {
			// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:69:7:
			// ( predclause | opclause | orclause | notclause )
			int alt7 = 4;
			switch (input.LA(1)) {
				case OBJID: {
					int LA7_1 = input.LA(2);

					if ((LA7_1 == ROUND_BRACKETS_OPEN)) {
						alt7 = 1;
					} else if ((LA7_1 == WHITESPACE)) {
						alt7 = 2;
					} else {
						NoViableAltException nvae = new NoViableAltException("", 7, 1, input);

						throw nvae;
					}
				}
					break;
				case QNAME: {
					int LA7_2 = input.LA(2);

					if ((LA7_2 == WHITESPACE)) {
						alt7 = 2;
					} else if ((LA7_2 == ROUND_BRACKETS_OPEN)) {
						alt7 = 1;
					} else {
						NoViableAltException nvae = new NoViableAltException("", 7, 2, input);

						throw nvae;
					}
				}
					break;
				case INDICATOR:
				case ADDRESS:
				case SRCLOC: {
					int LA7_3 = input.LA(2);

					if ((LA7_3 == WHITESPACE)) {
						alt7 = 2;
					} else if ((LA7_3 == ROUND_BRACKETS_OPEN)) {
						alt7 = 1;
					} else {
						NoViableAltException nvae = new NoViableAltException("", 7, 3, input);

						throw nvae;
					}
				}
					break;
				case IDENT: {
					int LA7_4 = input.LA(2);

					if ((LA7_4 == WHITESPACE)) {
						alt7 = 2;
					} else if ((LA7_4 == ROUND_BRACKETS_OPEN)) {
						alt7 = 1;
					} else {
						NoViableAltException nvae = new NoViableAltException("", 7, 4, input);

						throw nvae;
					}
				}
					break;
				case PERCENT:
				case STRING:
				case VARIABLE: {
					alt7 = 2;
				}
					break;
				case ANGLE_BRACKETS_OPEN: {
					alt7 = 3;
				}
					break;
				case NOT: {
					alt7 = 4;
				}
					break;
				default:
					NoViableAltException nvae = new NoViableAltException("", 7, 0, input);

					throw nvae;
			}

			switch (alt7) {
				case 1:
					// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:69:12:
					// predclause
				{
					root_0 = adaptor.nil();

					pushFollow(FOLLOW_predclause_in_clause123);
					predclause11 = predclause();

					state._fsp--;

					adaptor.addChild(root_0, predclause11.getTree());

				}
					break;
				case 2:
					// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:69:25:
					// opclause
				{
					root_0 = adaptor.nil();

					pushFollow(FOLLOW_opclause_in_clause127);
					opclause12 = opclause();

					state._fsp--;

					adaptor.addChild(root_0, opclause12.getTree());

				}
					break;
				case 3:
					// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:69:36:
					// orclause
				{
					root_0 = adaptor.nil();

					pushFollow(FOLLOW_orclause_in_clause131);
					orclause13 = orclause();

					state._fsp--;

					adaptor.addChild(root_0, orclause13.getTree());

				}
					break;
				case 4:
					// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:69:47:
					// notclause
				{
					root_0 = adaptor.nil();

					pushFollow(FOLLOW_notclause_in_clause135);
					notclause14 = notclause();

					state._fsp--;

					adaptor.addChild(root_0, notclause14.getTree());

				}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
			retval.tree = adaptor.errorNode(input, retval.start, input.LT(-1), re);

		} finally {
		}
		return retval;
	}

	// $ANTLR end "clause"

	public static class predclause_return extends ParserRuleReturnScope {
		Object tree;

		@Override
		public Object getTree() {
			return tree;
		}
	};

	// $ANTLR start "predclause"
	// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:70:1:
	// predclause : ref ROUND_BRACKETS_OPEN ( WHITESPACE )? pair ( ( WHITESPACE )? COMMA ( WHITESPACE )? pair )* (
	// WHITESPACE )? ROUND_BRACKETS_CLOSE ;
	public final TologParser.predclause_return predclause() throws RecognitionException {
		TologParser.predclause_return retval = new TologParser.predclause_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token ROUND_BRACKETS_OPEN16 = null;
		Token WHITESPACE17 = null;
		Token WHITESPACE19 = null;
		Token COMMA20 = null;
		Token WHITESPACE21 = null;
		Token WHITESPACE23 = null;
		Token ROUND_BRACKETS_CLOSE24 = null;
		TologParser.ref_return ref15 = null;

		TologParser.pair_return pair18 = null;

		TologParser.pair_return pair22 = null;

		Object ROUND_BRACKETS_OPEN16_tree = null;
		Object WHITESPACE17_tree = null;
		Object WHITESPACE19_tree = null;
		Object COMMA20_tree = null;
		Object WHITESPACE21_tree = null;
		Object WHITESPACE23_tree = null;
		Object ROUND_BRACKETS_CLOSE24_tree = null;

		try {
			// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:70:11:
			// ( ref ROUND_BRACKETS_OPEN ( WHITESPACE )? pair ( ( WHITESPACE )? COMMA ( WHITESPACE )? pair )* (
			// WHITESPACE )? ROUND_BRACKETS_CLOSE )
			// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:70:16:
			// ref ROUND_BRACKETS_OPEN ( WHITESPACE )? pair ( ( WHITESPACE )? COMMA ( WHITESPACE )? pair )* ( WHITESPACE
			// )? ROUND_BRACKETS_CLOSE
			{
				root_0 = adaptor.nil();

				pushFollow(FOLLOW_ref_in_predclause144);
				ref15 = ref();

				state._fsp--;

				adaptor.addChild(root_0, ref15.getTree());
				ROUND_BRACKETS_OPEN16 = (Token) match(input, ROUND_BRACKETS_OPEN, FOLLOW_ROUND_BRACKETS_OPEN_in_predclause146);
				ROUND_BRACKETS_OPEN16_tree = adaptor.create(ROUND_BRACKETS_OPEN16);
				adaptor.addChild(root_0, ROUND_BRACKETS_OPEN16_tree);

				// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:70:40:
				// ( WHITESPACE )?
				int alt8 = 2;
				int LA8_0 = input.LA(1);

				if ((LA8_0 == WHITESPACE)) {
					alt8 = 1;
				}
				switch (alt8) {
					case 1:
						// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:70:40:
						// WHITESPACE
					{
						WHITESPACE17 = (Token) match(input, WHITESPACE, FOLLOW_WHITESPACE_in_predclause148);
						WHITESPACE17_tree = adaptor.create(WHITESPACE17);
						adaptor.addChild(root_0, WHITESPACE17_tree);

					}
						break;

				}

				pushFollow(FOLLOW_pair_in_predclause151);
				pair18 = pair();

				state._fsp--;

				adaptor.addChild(root_0, pair18.getTree());
				// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:70:57:
				// ( ( WHITESPACE )? COMMA ( WHITESPACE )? pair )*
				loop11: do {
					int alt11 = 2;
					int LA11_0 = input.LA(1);

					if ((LA11_0 == WHITESPACE)) {
						int LA11_1 = input.LA(2);

						if ((LA11_1 == COMMA)) {
							alt11 = 1;
						}

					} else if ((LA11_0 == COMMA)) {
						alt11 = 1;
					}

					switch (alt11) {
						case 1:
							// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:70:58:
							// ( WHITESPACE )? COMMA ( WHITESPACE )? pair
						{
							// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:70:58:
							// ( WHITESPACE )?
							int alt9 = 2;
							int LA9_0 = input.LA(1);

							if ((LA9_0 == WHITESPACE)) {
								alt9 = 1;
							}
							switch (alt9) {
								case 1:
									// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:70:58:
									// WHITESPACE
								{
									WHITESPACE19 = (Token) match(input, WHITESPACE, FOLLOW_WHITESPACE_in_predclause154);
									WHITESPACE19_tree = adaptor.create(WHITESPACE19);
									adaptor.addChild(root_0, WHITESPACE19_tree);

								}
									break;

							}

							COMMA20 = (Token) match(input, COMMA, FOLLOW_COMMA_in_predclause157);
							COMMA20_tree = adaptor.create(COMMA20);
							adaptor.addChild(root_0, COMMA20_tree);

							// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:70:76:
							// ( WHITESPACE )?
							int alt10 = 2;
							int LA10_0 = input.LA(1);

							if ((LA10_0 == WHITESPACE)) {
								alt10 = 1;
							}
							switch (alt10) {
								case 1:
									// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:70:76:
									// WHITESPACE
								{
									WHITESPACE21 = (Token) match(input, WHITESPACE, FOLLOW_WHITESPACE_in_predclause159);
									WHITESPACE21_tree = adaptor.create(WHITESPACE21);
									adaptor.addChild(root_0, WHITESPACE21_tree);

								}
									break;

							}

							pushFollow(FOLLOW_pair_in_predclause162);
							pair22 = pair();

							state._fsp--;

							adaptor.addChild(root_0, pair22.getTree());

						}
							break;

						default:
							break loop11;
					}
				} while (true);

				// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:70:95:
				// ( WHITESPACE )?
				int alt12 = 2;
				int LA12_0 = input.LA(1);

				if ((LA12_0 == WHITESPACE)) {
					alt12 = 1;
				}
				switch (alt12) {
					case 1:
						// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:70:95:
						// WHITESPACE
					{
						WHITESPACE23 = (Token) match(input, WHITESPACE, FOLLOW_WHITESPACE_in_predclause166);
						WHITESPACE23_tree = adaptor.create(WHITESPACE23);
						adaptor.addChild(root_0, WHITESPACE23_tree);

					}
						break;

				}

				ROUND_BRACKETS_CLOSE24 = (Token) match(input, ROUND_BRACKETS_CLOSE, FOLLOW_ROUND_BRACKETS_CLOSE_in_predclause169);
				ROUND_BRACKETS_CLOSE24_tree = adaptor.create(ROUND_BRACKETS_CLOSE24);
				adaptor.addChild(root_0, ROUND_BRACKETS_CLOSE24_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
			retval.tree = adaptor.errorNode(input, retval.start, input.LT(-1), re);

		} finally {
		}
		return retval;
	}

	// $ANTLR end "predclause"

	public static class pair_return extends ParserRuleReturnScope {
		Object tree;

		@Override
		public Object getTree() {
			return tree;
		}
	};

	// $ANTLR start "pair"
	// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:71:1:
	// pair : expr ( ( WHITESPACE )? DOUBLEDOT ( WHITESPACE )? ref )? ;
	public final TologParser.pair_return pair() throws RecognitionException {
		TologParser.pair_return retval = new TologParser.pair_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token WHITESPACE26 = null;
		Token DOUBLEDOT27 = null;
		Token WHITESPACE28 = null;
		TologParser.expr_return expr25 = null;

		TologParser.ref_return ref29 = null;

		Object WHITESPACE26_tree = null;
		Object DOUBLEDOT27_tree = null;
		Object WHITESPACE28_tree = null;

		try {
			// D:\\Krosse\\TMQL4J_Ex\\tolog2tmql\\src\\de\\topicmapslab\\tmql4j\\converter\\tolog\\parser\\TologParser.g:71:5:
